--- a/core_styling.css
+++ b/core_styling.css
@@ -1,8 +1,7 @@
 /* ==================================================
- * RCore by Cyril Neveu
  * Based on:
- * - Normalize v3.0.2 | MIT | git.io/normalize
- * - Skeleton V2.0.4 by Dave Gamache | MIT | www.getskeleton.com
+ * - Normalize 3.0.2 | MIT | git.io/normalize
+ * - Skeleton 2.0.4 by Dave Gamache | MIT | www.getskeleton.com
  */
 
 /* ==================================================
@@ -44,8 +43,7 @@ body {
 
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11 and Firefox.
  * Correct `block` display not defined for `main` in IE 11.
  */
 
@@ -110,6 +108,10 @@ a {
     background-color: transparent;
 }
 
+a * {
+    display: block;
+}
+
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
@@ -149,8 +151,7 @@ dfn {
 }
 
 /**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
+ * Address variable `h1` font-size and margin within `section` and `article` contexts in Firefox 4+, Safari, and Chrome.
  */
 
 h1 {
@@ -262,8 +263,7 @@ samp {
  */
 
 /**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
+ * Known limitation: by default, Chrome and Safari on OS X allow very limited styling of `select`, unless a `border` property is set.
  */
 
 /**
@@ -304,11 +304,9 @@ select {
 }
 
 /**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
+ * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio` and `video` controls.
  * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
+ * 3. Improve usability and consistency of cursor style between image-type `input` and others.
  */
 
 button,
@@ -356,8 +354,7 @@ input::-moz-focus-inner {
 }
 
 /**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
+ * Address Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet.
  */
 
 input {
@@ -379,8 +376,7 @@ input[type="radio"] {
 }
 
 /**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
+ * Fix the cursor style for Chrome's increment/decrement buttons. For certain `font-size` values of the `input`, it causes the cursor style of the
  * decrement button to change from `default` to `text`.
  */
 
@@ -391,8 +387,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
- *    (include `-moz` to future-proof).
+ * 2. Address `box-sizing` set to `border-box` in Safari and Chrome (include `-moz` to future-proof).
  */
 
 input[type="search"] {
@@ -404,8 +399,7 @@ input[type="search"] {
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
+ * Safari (but not Chrome) clips the cancel button when the search input has padding (and `textfield` appearance).
  */
 
 input[type="search"]::-webkit-search-cancel-button,
@@ -489,7 +483,7 @@ tr:hover {
  */
 
 .grid {
-    columns: 4;
+    column-count: 4;
     column-gap: 15px;
 }
 
@@ -498,6 +492,7 @@ tr:hover {
     position: relative;
     break-inside: avoid-column;
     margin-bottom: 15px;
+    display: block;
 }
 
 .grid > *:last-child {
@@ -512,7 +507,7 @@ tr:hover {
 .columns {
     width: 100%;
     float: left;
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
 
 /**
@@ -719,13 +714,18 @@ pre > code {
 }
 
 img,
-video {
+video,
+iframe {
     max-width: 100%;
 }
 
 /* ==================================================
  * Utilities
  */
+
+.u-no-interact {
+    pointer-events: none;
+}
 
 .u-full-width {
     width: 100%;
@@ -755,7 +755,7 @@ video {
  */
 
 /**
- * Self Clearing Goodness
+ * Self Clearing
  */
 
 .container:after,
