Tests, fixes and adjustments + SELECT DISTINCT

--- a/core_styling.css
+++ b/core_styling.css
@@ -1,7 +1,7 @@
 /* ==================================================
  * Based on:
  * - Normalize 3.0.2 | MIT | git.io/normalize
- * - Skeleton 2.0.4 by Dave Gamache | MIT | www.getskeleton.com
+ * - Skeleton 2.0.4 by Dave Gamache | MIT | getskeleton.com
  */
 
 /* ==================================================
