Return file name, core_scripting.js, tests & clean up

--- a/core_styling.css
+++ b/core_styling.css
@@ -1,10 +1,13 @@
-/* ==================================================
+/****************************************************
  * Based on:
  * - Normalize 3.0.2 | MIT | git.io/normalize
  * - Skeleton 2.0.4 by Dave Gamache | MIT | getskeleton.com
+ * @author Cyril Neveu
+ * @link https://github.com/ripley2459/r
+ * @version 3
  */
 
-/* ==================================================
+/****************************************************
  * Reset
  */
 
@@ -13,8 +16,8 @@
  */
 
 *,
-::before,
-::after {
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
@@ -37,7 +40,7 @@ body {
     margin: 0;
 }
 
-/* ==================================================
+/****************************************************
  * HTML5 display definitions
  */
 
@@ -96,7 +99,7 @@ template {
     display: none;
 }
 
-/* ==================================================
+/****************************************************
  * Links
  */
 
@@ -121,7 +124,7 @@ a:hover {
     outline: 0;
 }
 
-/* ==================================================
+/****************************************************
  * Text-level semantics
  */
 
@@ -196,7 +199,7 @@ sub {
     bottom: -0.25em;
 }
 
-/* ==================================================
+/****************************************************
  * Embedded content
  */
 
@@ -216,7 +219,7 @@ svg:not(:root) {
     overflow: hidden;
 }
 
-/* ==================================================
+/****************************************************
  * Grouping content
  */
 
@@ -258,7 +261,7 @@ samp {
     font-size: 1em;
 }
 
-/* ==================================================
+/****************************************************
  * Forms
  */
 
@@ -444,7 +447,7 @@ optgroup {
     font-weight: bold;
 }
 
-/* ==================================================
+/****************************************************
  * Tables
  */
 
@@ -467,7 +470,7 @@ tr:hover {
     background-color: rgba(0, 0, 0, .1);
 }
 
-/* ==================================================
+/****************************************************
  * Container
  */
 
@@ -478,7 +481,7 @@ tr:hover {
     box-sizing: border-box;
 }
 
-/* ==================================================
+/****************************************************
  * Masonry
  */
 
@@ -503,7 +506,7 @@ tr:hover {
     margin-bottom: 0; /* 1 */
 }
 
-/* ==================================================
+/****************************************************
  * Columns
  */
 
@@ -668,7 +671,7 @@ tr:hover {
 
 }
 
-/* ==================================================
+/****************************************************
  * Sizes, adjustments and other things
  */
 
@@ -723,7 +726,7 @@ iframe {
     max-width: 100%;
 }
 
-/* ==================================================
+/****************************************************
  * Utilities
  */
 
@@ -754,7 +757,7 @@ iframe {
     visibility: hidden;
 }
 
-/* ==================================================
+/****************************************************
  * Clearing
  */
 
@@ -770,7 +773,7 @@ iframe {
     clear: both;
 }
 
-/* ==================================================
+/****************************************************
  * Media Queries
  */
 
