--- a/core_styling.css
+++ b/core_styling.css
@@ -1,7 +1,7 @@
 /****************************************************
  * Based on:
- * - Normalize 3.0.2 | MIT | git.io/normalize
- * - Skeleton 2.0.4 by Dave Gamache | MIT | getskeleton.com
+ * - Normalize 8.0.1 | MIT | https://necolas.github.io/normalize.css/
+ * - Skeleton 2.0.4 by Dave Gamache | MIT | http://getskeleton.com/
  * @author Cyril Neveu
  * @link https://github.com/ripley2459/r
  * @version 3
